--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <!-- PROFILE IMAGE -->
         <div class="profile">
-            <img src="./images/img.jpg" alt="profile image">
+            <img src="./images/nim.jpg" alt="profile image">
             <div class="name">
                 Nima Lhamo
             </div>
